--- a/templates/about.html
+++ b/templates/about.html
@@ -18,6 +18,7 @@
         <div class="col-lg-12 text-left">
           <h2>About</h2>
           <p><a href="/">Home</a></p>
+	  <p> This is my first Heroku app! </p>
         </div>
       </div>
     </div>
