--- a/templates/about.html
+++ b/templates/about.html
@@ -7,7 +7,7 @@
     <meta name="author" content="@gotoariel">
     <!-- <link rel="icon" href="favicon.ico"> -->
 
-    <title>Wilkommen, bienvenue, and welcome to Heroku!</title>
+    <title>About</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -18,7 +18,9 @@
         <div class="col-lg-12 text-left">
           <h2>About</h2>
           <p><a href="/">Home</a></p>
-	  <p> This is my first Heroku app! </p>
+	  <p> This is my first Heroku app, where I use Flask, Heroku, AlphaVantage, and Bokeh to visualize stock prices.  </p>
+    <p> Pick a stock by typing its Ticker label. </p>
+
         </div>
       </div>
     </div>
