--- a/templates/form.html
+++ b/templates/form.html
@@ -21,7 +21,7 @@
 <div class = "form-center">
 <form action="/form" method = "POST">
     <p>TICKER <input type = "text" name = "Ticker" /></p>
-    <input type="radio" name="options" id="option1" value="price"> Open Price </input><br>
+    <input type="radio" name="options" id="option1" value="price" checked> Open Price </input><br>
     <input type="radio" name="options" id="option2" value="volume"> Market Volume </input><br>
     <p><input type = "submit" value = "Submit" /></p>
 </form>
