--- a/templates/err.html
+++ b/templates/err.html
@@ -25,7 +25,7 @@ a:link {
       <div class="row">
         <div class="col-lg-12 text-left">
           <h2>ERROR:</h2>
-          <p> You either entered a non-existing Ticker or forgot to choose one of the options of price or volume. Please return to the form page. </p>
+          <p> You entered a non-existing Ticker. Please return to the form page. </p>
           <ul>
             <li><a href="/form">TICKER FORM</a></li>
           </ul>
